--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
+    "bpmn-js": "^5.0.5",
     "chart.js": "^2.8.0",
     "font-awesome": "^4.7.0",
     "ng-sidebar": "^9.1.1",
